--- a/assets/index.html
+++ b/assets/index.html
@@ -18,7 +18,7 @@
                 <h1>Learn to code by watching others</h1>
                 <p class="description__p">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
             </section>
-            <div class="div__button">
+            <div class="button__wrapper">
                 <button class="div__button__trial">Try it free 7 days <span>then $20/mo. thereafter</span></button>
             </div>
             <section class="secao__formulario">
